<resources>
    <string name="app_name">SwimmingTraining</string>
    <string name="login">Логин</string>
    <string name="passspord">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="log_up">Зарегистрироваться</string>
    <string name="title_activity_main_trainer">Main_trainer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настойки</string>
    <string name="first_name_autor">Мустафа</string>
    <string name="last_name_author">Шабатуков</string>
    <string name="seach_vk">vk.com/don_mussa</string>
    <string name="sign_out">Выйти</string>
    <string-array name="position">
        <item>Sportsman</item>
        <item>Trainer</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_main_sportsman">Main_sportsman</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
